# gbc-chat-desktop

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
